--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
          alt="movie ranking page"
       />
       <hr />
-      <a href="">About Me</a>
-      <a href="">Contact Me</a>
+      <a href="./public/about.html">About Me</a>
+      <a href="./public/contact.html">Contact Me</a>
    </body>
 </html>
